<resources>
    <string name="app_name">Средняя оценка</string>

    <string name="text_mark_1">1</string>
    <string name="text_mark_2">2</string>
    <string name="text_mark_3">3</string>
    <string name="text_mark_4">4</string>
    <string name="text_mark_5">5</string>

    <string name="text_clear">Очистить</string>
    <string name="text_backspace"><![CDATA[<—]]></string>
    <string name="text_average">Среднее:</string>
    <string name="text_n_a">n/a</string>
    <string name="empty">_</string>

    <string name="about_title">Спасибо за использование</string>
    <string name="about_message"><![CDATA[
        В этом приложении нет и не будет назойливой рекламы.<br/><br/>
        Если Вы хотите поддержать разработчика, установите моё новое приложение <b>Good Job</b> для формирования полезных привычек.
    ]]></string>
    <string name="text_good_job">Приложение Good Job</string>

    <string name="settings_title">Настройки</string>
    <string name="mark_1_enable">Оценка \"кол\"</string>
</resources>
