<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background_Linear_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:background="@color/background_night"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/title_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_title"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:textColor="@color/text_night" />

    <TextView
        android:id="@+id/message_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        tools:text="@string/about_message"
        tools:textColor="@color/text_night" />

    <Button
        android:id="@+id/good_job_button"
        style="@android:style/Widget.DeviceDefault.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="8dp"
        android:text="@string/text_good_job"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent" />

</LinearLayout>