<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="vertical">

    <LinearLayout
        android:id="@+id/root_LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="vertical"
        android:paddingStart="24dp"
        android:paddingLeft="24dp"
        android:paddingEnd="24dp"
        android:paddingRight="24dp"
        android:paddingBottom="12dp"
        tools:background="@android:color/white">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end">

            <ImageView
                android:id="@+id/settings_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:src="@drawable/ic_settings_black_24dp"
                tools:background="@drawable/background_icon_button"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/toggle_night_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:padding="16dp"
                tools:background="@drawable/background_icon_button"
                tools:ignore="ContentDescription"
                tools:src="@drawable/ic_moon" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/average_label_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_average"
                android:textSize="30sp"
                tools:textColor="@android:color/black" />

            <TextView
                android:id="@+id/average_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:minWidth="100sp"
                android:textSize="42sp"
                tools:text="4.51"
                tools:textColor="@color/mark_3" />

        </LinearLayout>

        <TextView
            android:id="@+id/marks_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textSize="24sp"
            tools:text="4544 5423 42"
            tools:textColor="@android:color/black" />

        <LinearLayout
            android:id="@+id/markButtons_LinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <FrameLayout
                android:id="@+id/mark_1_back"
                style="@style/ButtonBackground"
                android:background="@drawable/background_button_1">

                <TextView
                    android:id="@+id/mark_1_button"
                    style="@style/ButtonText"
                    android:text="@string/text_mark_1" />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/mark_2_back"
                style="@style/ButtonBackground"
                android:background="@drawable/background_button_2">

                <TextView
                    android:id="@+id/mark_2_button"
                    style="@style/ButtonText"
                    android:text="@string/text_mark_2" />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/mark_3_back"
                style="@style/ButtonBackground"
                android:background="@drawable/background_button_3">

                <TextView
                    android:id="@+id/mark_3_button"
                    style="@style/ButtonText"
                    android:text="@string/text_mark_3" />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/mark_4_back"
                style="@style/ButtonBackground"
                android:background="@drawable/background_button_4">

                <TextView
                    android:id="@+id/mark_4_button"
                    style="@style/ButtonText"
                    android:text="@string/text_mark_4" />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/mark_5_back"
                style="@style/ButtonBackground"
                android:background="@drawable/background_button_5">

                <TextView
                    android:id="@+id/mark_5_button"
                    style="@style/ButtonText"
                    android:text="@string/text_mark_5" />

            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/backspace_button"
                style="@style/ButtonText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:text="@string/text_backspace"
                tools:background="@drawable/background_button_remote" />

            <TextView
                android:id="@+id/clear_button"
                style="@style/ButtonText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_clear"
                tools:background="@drawable/background_button_remote" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3.4" />

        <LinearLayout
            android:id="@+id/for_sale_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="horizontal"
            android:paddingVertical="8dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/for_sale_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_ruble_black_24"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/for_sale_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:textColorLink="@color/colorAccent"
                android:textSize="14sp"
                tools:text="@string/for_sale"
                tools:textColor="@android:color/black" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>